# LordoftheSpreads

./: .gitignore  CLAUDE.md  README.md  SETUP.md  pyproject.toml
code/: README.md
code/connectors/: base.py  hyperliquid.py  types.py
code/data/: loader.py
code/data_recorder/: README.md  recorder.py
prompts/: README.md
references/: README.md
research/: agent_architecture.md  algorithms.md  backtesting_mm.md  hummingbot.md  hyperliquid.md  index.md  market_making_101.md  order_books.md  other_dexes.md  regulatory_notes.md  where_does_the_edge_come_from.md
scratch/: test_connector.py  test_loader.py  track_b_sdk_eval.py
