[project]
name = "quant-mm-agent"
version = "0.0.1"
description = "Agent-augmented market-making bot for decentralized perpetual exchanges"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Hyperliquid official SDK
    "hyperliquid-python-sdk>=0.9.0",

    # Data handling
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",        # parquet
    "numpy>=1.26.0",

    # WebSocket / async
    "websockets>=12.0",
    "aiohttp>=3.9.0",

    # Config and secrets
    "python-dotenv>=1.0.0",
    "pydantic>=2.6.0",         # config schemas, runtime validation
    "pydantic-settings>=2.2.0",

    # Logging / observability
    "structlog>=24.1.0",
    "rich>=13.7.0",            # pretty CLI output

    # Anthropic SDK for the agent layer
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "ipython>=8.20.0",         # better REPL for exploration
]
backtest = [
    # Add when we set up the backtester
    # "hftbacktest" — install separately, has its own constraints
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
